# infrablockchain.cdt

./: CMakeLists.txt  README.md  docs.json
.cicd/: build.sh  create-docker-from-binary.sh  integration-tests.sh  pipeline.yml  test-package.run.sh
.cicd/helpers/: docker-hash.sh
docs/: index.md
docs/02_installation/: index.md
docs/03_command-reference/: infrablockchain-abidiff.md  infrablockchain-abigen.md  infrablockchain-cc.md  infrablockchain-cpp.md  infrablockchain-init.md  infrablockchain-ld.md
docs/04_upgrading/: 1.2-to-1.3.md
docs/05_features/: 10_resource_payer.md  10_return_values_from_actions.md  20_return_values_from_actions.md  40_native-tester-compilation.md
docs/06_how-to-guides/: 50_how-to-create-and-use-action-wrappers.md  60_how-to-return-values-from-actions.md
docs/07_best-practices/: 02_naming-conventions.md  04_data-design-and-migration.md  07_error_handling.md  11_debugging_a_smart_contract.md
docs/08_troubleshooting/: index.md
docs/09_tutorials/: 01_binary-extension.md  02_abi-variants.md  03_create-an-abi-file.md
examples/hello/: CMakeLists.txt  README.txt
examples/kv_addr_book/src/: CMakeLists.txt
examples/singleton_example/src/: CMakeLists.txt
libraries/: CMakeLists.txt
modules/: ClangExternalProject.txt  InfraBlockchainCDTMacros.cmake.in  InfraBlockchainLibConfig.cmake.in  InfraBlockchainWasmToolchain.cmake.in  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt  ToolsExternalProject.txt  infrablockchain.cdt-config.cmake
scripts/: generate_bottle.sh  generate_tarball.sh
tools/cc/: cdt-cc.cpp.in  (+2 more)
(+87 files in other folders)
